--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,10 @@
   
   <router-outlet></router-outlet>
   -->
-  <app-traficlist></app-traficlist>
-  <app-stat></app-stat>
+  <div class="row py-3">
+    <app-traficlist class="col-lg-8"></app-traficlist>
+    <app-stat class="col-lg-4"></app-stat>
+  </div>
   <app-footer></app-footer>
 </div>
 
