--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,11 @@
   
   <app-header></app-header>
   <app-navbar></app-navbar>
-  <!--
   
-  
-  -->
   <div class="row py-3">
-    <app-traficlist class="col-lg-8"></app-traficlist>
-    <router-outlet></router-outlet>
+   
+    <router-outlet class="col-lg-8"></router-outlet>
+    <app-stat class="col-lg-4"></app-stat>
   </div>
   <app-footer></app-footer>
 </div>
