--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,10 +8,10 @@
         <ul class="navbar-nav">
           
           <li class="nav-item">
-            <a class="nav-link" href="#">Forgalom</a>
+            <a class="nav-link" routerLink="/trafics">Forgalom</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kategóriák</a>
+            <a class="nav-link" routerLink="/categories">Kategóriák</a>
           </li>
           
         </ul>
