Kategória, forgalom lista + form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
   
   <div class="row py-3">
    
-    <router-outlet class="col-lg-8"></router-outlet>
+    <div  class="col-lg-8">
+      <router-outlet></router-outlet>
+    </div>
     <app-stat class="col-lg-4"></app-stat>
   </div>
   <app-footer></app-footer>
