--- a/src/app/components/categories/form/form.component.html
+++ b/src/app/components/categories/form/form.component.html
@@ -1,1 +1,10 @@
-<p>form works!</p>
+<h3>Kategória kezelés</h3>
+<hr>
+<h3>Kategória felvétel</h3>
+<form class="form-floating">
+    <input type="name" class="form-control" id="catname" placeholder="" value="">
+    <label for="catname">Kategória név</label>
+</form>
+<button type="button" class="btn btn-primary mb-3" routerLink="/categories">Vissza a listához</button>
+<button type="button" class="btn btn-primary mb-3" routerLink="/categories">Mentés</button>
+
