--- a/src/app/components/categories/list/list.component.html
+++ b/src/app/components/categories/list/list.component.html
@@ -1,3 +1,18 @@
 
 <h3>Kategória kezelés</h3>
 <hr>
+<button type="button" class="btn btn-primary mb-3" routerLink="/categoryform">új adat rögzítés</button>
+
+<table class="table table-hover table-striped table-bordered">
+    <thead>
+      <tr>
+        <th >#</th>
+        <th >Kategóriák</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+    <tfoot>
+        <th colspan="2" class="text-center">Összesen <span>0</span> rekord</th>
+    </tfoot>
+  </table>
