--- a/src/app/components/trafics/form/form.component.html
+++ b/src/app/components/trafics/form/form.component.html
@@ -1,1 +1,30 @@
-<p>form works!</p>
+<h3>Forgalom</h3>
+<hr>
+<h3>Forgalom felvétel</h3>
+<form class="form-floating">
+    <input type="name" class="form-control" id="traficname" placeholder="" value="">
+    <label for="traficname">Forgalom név</label>
+</form>
+<form class="form-floating">
+    <input type="name" class="form-control" id="productname" placeholder="" value="">
+    <label for="productname">Termék név</label>
+</form>
+<form class="form-floating">
+    <input type="name" class="form-control" id="buyername" placeholder="" value="">
+    <label for="buyername">Vevő név</label>
+</form>
+<form class="form-floating">
+    <input type="number" class="form-control" id="countfield" placeholder="" value="">
+    <label for="countfield">Mennyiség</label>
+</form>
+<form class="form-floating">
+    <input type="number" class="form-control" id="Pricefield" placeholder="" value="">
+    <label for="Pricefield">Nettó ár</label>
+</form>
+<form class="form-floating">
+    <input type="number" class="form-control" id="Sumfield" placeholder="" value="">
+    <label for="Sumfield">Összesen</label>
+</form>
+<button type="button" class="btn btn-primary mb-3" routerLink="/trafics">Vissza a listához</button>
+<button type="button" class="btn btn-primary mb-3" routerLink="/trafics">Mentés</button>
+<
