--- a/src/app/components/trafics/list/list.component.html
+++ b/src/app/components/trafics/list/list.component.html
@@ -1,2 +1,23 @@
 <h3>Forgalom</h3>
 <hr>
+<button type="button" class="btn btn-primary mb-3" routerLink="/traficform">új adat rögzítés</button>
+<table class="table table-hover table-striped table-bordered">
+    <thead>
+      <tr>
+        <th >#</th>
+        <th >Kategóriák</th>
+        <th>Termék</th>
+        <th>vevő</th>
+        <th class="text-end">Mennyiség</th>
+        <th class="text-end">Nettó ár</th>
+        <th class="text-end">Összesen</th>
+        <th>Kiadva</th>
+      </tr>
+    </thead>
+    <tbody>
+     
+    </tbody>
+    <tfoot>
+        <th colspan="8" class="text-center">Összesen <span>0</span> rekord</th>
+    </tfoot>
+  </table>
