--- a/src/app/components/trafics/form/form.component.html
+++ b/src/app/components/trafics/form/form.component.html
@@ -25,6 +25,5 @@
     <input type="number" class="form-control" id="Sumfield" placeholder="" value="">
     <label for="Sumfield">Összesen</label>
 </form>
-<button type="button" class="btn btn-primary mb-3" routerLink="/trafics">Vissza a listához</button>
+<button type="button" class="btn btn-secondary mb-3 me-2" routerLink="/trafics">Vissza a listához</button>
 <button type="button" class="btn btn-primary mb-3" routerLink="/trafics">Mentés</button>
-<
