--- a/src/app/components/categories/form/form.component.html
+++ b/src/app/components/categories/form/form.component.html
@@ -5,6 +5,6 @@
     <input type="name" class="form-control" id="catname" placeholder="" value="">
     <label for="catname">Kategória név</label>
 </form>
-<button type="button" class="btn btn-primary mb-3" routerLink="/categories">Vissza a listához</button>
+<button type="button" class="btn btn-secondary mb-3 me-2" routerLink="/categories">Vissza a listához</button>
 <button type="button" class="btn btn-primary mb-3" routerLink="/categories">Mentés</button>
 
