--- a/src/app/components/categories/form/form.component.html
+++ b/src/app/components/categories/form/form.component.html
@@ -1,10 +1,10 @@
 <h3>Kategória kezelés</h3>
 <hr>
 <h3>Kategória felvétel</h3>
-<form class="form-floating">
+<form class="form-floating mb-3">
     <input type="name" class="form-control" id="catname" placeholder="" value="">
     <label for="catname">Kategória név</label>
 </form>
-<button type="button" class="btn btn-secondary mb-3 me-2" routerLink="/categories">Vissza a listához</button>
-<button type="button" class="btn btn-primary mb-3" routerLink="/categories">Mentés</button>
+<button type="button" class="btn btn-secondary mb-3 me-2 " routerLink="/categories">Vissza a listához</button>
+<button type="button" class="btn btn-primary mb-3 " routerLink="/categories">Mentés</button>
 
