--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,16 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/categories">Kategóriák</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/product">Termékek</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/buyer">Vásárlók</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/price">Árlista</a>
+          </li>
+          
           
         </ul>
       </div>
