--- a/src/app/components/categories/list/list.component.html
+++ b/src/app/components/categories/list/list.component.html
@@ -13,8 +13,8 @@
     </thead>
     <tbody>
     </tbody>
-      <tr *ngFor="let category of categories;">
-        <td> {{ category.id}}</td>
+      <tr *ngFor="let category of categories;index as i;">
+        <td> {{ i+1}}</td>
         <td> {{ category.kategoriaNev}}</td>
         <td></td>
       </tr>
