--- a/src/app/components/categories/list/list.component.html
+++ b/src/app/components/categories/list/list.component.html
@@ -4,7 +4,7 @@
 <button type="button" class="btn btn-primary mb-3" routerLink="/categoryform">új adat rögzítés</button>
 
 <table class="table table-hover table-striped table-bordered">
-    <thead>
+    <thead class="table-dark">
       <tr>
         <th >#</th>
         <th >Kategóriák</th>
@@ -16,7 +16,10 @@
       <tr *ngFor="let category of categories;index as i;">
         <td> {{ i+1}}</td>
         <td> {{ category.kategoriaNev}}</td>
-        <td></td>
+        <td class="text-end">
+          <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
+          <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+        </td>
       </tr>
     <tfoot>
         <th colspan="3" class="text-center">Összesen <span>0</span> rekord</th>
