--- a/src/app/components/trafics/list/list.component.html
+++ b/src/app/components/trafics/list/list.component.html
@@ -12,9 +12,25 @@
         <th class="text-end">Nettó ár</th>
         <th class="text-end">Összesen</th>
         <th>Kiadva</th>
+        <th class="text-end">Műveletek</th>
       </tr>
     </thead>
     <tbody>
+      <tr *ngFor="let trafic of trafics; index as i;">
+        <td>{{i+1}}</td>
+        <td>{{ trafic.kategoriaNev}}</td>
+        <td>{{ trafic.termek}}</td>
+        <td>{{ trafic.vevo}}</td>
+        <td class="text-end">{{trafic.mennyiseg}} {{trafic.egyseg}}</td>
+        <td class="text-end">{{trafic.nettoar}} Ft</td>
+        <td class="text-end">{{trafic.mennyiseg * trafic.nettoar}} Ft</td>
+        <td>{{trafic.kiadva ? "Kiadva": "Folyamatban"}}</td>
+
+        <td class="text-end">
+          <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
+          <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+        </td>
+      </tr>
      
     </tbody>
     <tfoot>
