--- a/src/app/components/categories/list/list.component.html
+++ b/src/app/components/categories/list/list.component.html
@@ -22,6 +22,6 @@
         </td>
       </tr>
     <tfoot>
-        <th colspan="3" class="text-center">Összesen <span>0</span> rekord</th>
+        <th colspan="3" class="text-center">Összesen <span>{{categories.length}}</span> rekord</th>
     </tfoot>
   </table>
