--- a/src/app/components/trafics/list/list.component.html
+++ b/src/app/components/trafics/list/list.component.html
@@ -34,6 +34,6 @@
      
     </tbody>
     <tfoot>
-        <th colspan="8" class="text-center">Összesen <span>0</span> rekord</th>
+        <th colspan="8" class="text-center">Összesen <span>{{trafics.length}}</span> rekord</th>
     </tfoot>
   </table>
