--- a/src/app/components/categories/list/list.component.html
+++ b/src/app/components/categories/list/list.component.html
@@ -15,10 +15,10 @@
     </tbody>
       <tr *ngFor="let category of categories;index as i;">
         <td> {{ i+1}}</td>
-        <td> {{ category.kategoriaNev}}</td>
+        <td> {{ category.categoryName}}</td>
         <td class="text-end">
-          <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
-          <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+          <button class="btn btn-sm btn-warning me-2" routerLink="/categoryform/{{category.id}}"><i class="bi bi-pencil-square"></i></button>
+          <button class="btn btn-sm btn-danger" (click)="delete(category.id)"><i class="bi bi-trash"></i></button>
         </td>
       </tr>
     <tfoot>
