--- a/src/app/components/trafics/list/list.component.html
+++ b/src/app/components/trafics/list/list.component.html
@@ -18,7 +18,7 @@
     <tbody>
       <tr *ngFor="let trafic of trafics; index as i;">
         <td>{{i+1}}</td>
-        <td>{{ trafic.kategoriaNev}}</td>
+        <td>{{ trafic.categoryName}}</td>
         <td>{{ trafic.termek}}</td>
         <td>{{ trafic.vevo}}</td>
         <td class="text-end">{{trafic.mennyiseg}} {{trafic.egyseg}}</td>
@@ -28,7 +28,7 @@
 
         <td class="text-end">
           <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
-          <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+          <button class="btn btn-sm btn-danger" (click)="delete(trafic.id)"><i class="bi bi-trash"></i></button>
         </td>
       </tr>
      
