--- a/src/app/components/product/list/list.component.html
+++ b/src/app/components/product/list/list.component.html
@@ -9,9 +9,16 @@
       </tr>
     </thead>
     <tbody>
-     
+     <tr *ngFor="let product of products; let i = index">
+        <td>{{i + 1}}</td>
+        <td>{{product.termek}}</td>
+        <td class="text-end">
+          <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
+          <button class="btn btn-sm btn-danger" ><i class="bi bi-trash"></i></button>
+        </td>
+      </tr>
     </tbody>
     <tfoot>
-        <th colspan="2" class="text-center">Összesen <span>0</span> rekord</th>
+        <th colspan="3" class="text-center">Összesen <span>{{products.length}}</span> rekord</th>
     </tfoot>
   </table>
