--- a/src/app/components/trafics/list/list.component.html
+++ b/src/app/components/trafics/list/list.component.html
@@ -27,7 +27,7 @@
         <td>{{trafic.kiadva ? "Kiadva": "Folyamatban"}}</td>
 
         <td class="text-end">
-          <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
+          <button class="btn btn-sm btn-warning me-2"  routerLink="/traficform/{{trafic.id}}"><i class="bi bi-pencil-square"></i></button>
           <button class="btn btn-sm btn-danger" (click)="delete(trafic.id)"><i class="bi bi-trash"></i></button>
         </td>
       </tr>
