--- a/src/app/components/trafics/form/form.component.html
+++ b/src/app/components/trafics/form/form.component.html
@@ -1,6 +1,7 @@
 <h3>Forgalom</h3>
 <hr>
-<h3>Forgalom felvétel</h3>
+<h3 *ngIf="this.id">Forgalom módosítás</h3>
+<h3 *ngIf="!this.id">Forgalom felvétel</h3>
 
 <div  class="form-floating mb-3">
     
@@ -18,17 +19,19 @@
 </select>
 -->
 <select name="Kategória" id="" class="form-select mb-3" [(ngModel)]="newTraffic.kategoriaId">
-    <option value="4">Sütemények</option>
+    
     <option value="1">Étel</option>
     <option value="2">Ital</option>
     <option value="3">Desszertek</option>
 </select>
-<select name="egység" id="" class="form-select mb-3" [(ngModel)]="newTraffic.egyseg">
+<select name="egyseg" id="" class="form-select mb-3" [(ngModel)]="newTraffic.egyseg">
     <option value="dl">Dl</option>
     <option value="db">Db</option>
     <option value="szelet">Szelet</option>
    
 </select>
+<p>Selected unit: {{ newTraffic.egyseg }}</p>
+
 <div class="form-floating mb-3">
     
     <input type="number" class="form-control mb-2" id="countfield" placeholder="" [(ngModel)]="newTraffic.mennyiseg" value="">
@@ -44,4 +47,6 @@
     <option value="0">Folyamatban</option>
 </select>
 <button type="button" class="btn btn-secondary mb-3 me-2 " routerLink="/trafics">Vissza a listához</button>
-<button type="button" class="btn btn-primary mb-3 " (click)="save()">Mentés</button>
+<button *ngIf="!this.id" type="button" class="btn btn-primary mb-3 "  (click)="save()">Mentés</button>
+<button *ngIf="this.id" type="button" class="btn btn-warning mb-3 "  (click)="save()">Módosítás</button>
+
