--- a/src/app/components/product/list/list.component.html
+++ b/src/app/components/product/list/list.component.html
@@ -13,8 +13,8 @@
         <td>{{i + 1}}</td>
         <td>{{product.termek}}</td>
         <td class="text-end">
-          <button class="btn btn-sm btn-warning me-2"><i class="bi bi-pencil-square"></i></button>
-          <button class="btn btn-sm btn-danger" ><i class="bi bi-trash"></i></button>
+          <button class="btn btn-sm btn-warning me-2" routerLink="/productform/{{product.id}}"><i class="bi bi-pencil-square"></i></button>
+          <button class="btn btn-sm btn-danger"  ><i class="bi bi-trash"></i></button>
         </td>
       </tr>
     </tbody>
